# owl-n4j

./: .dockerignore  .env.example  .gitignore  BACKLOG.md  CELLEBRITE_INGEST_AUDIT.md  CELLEBRITE_V2_MIGRATION_PLAN.md  CHANGELOG.md  COMMIT_MESSAGE.txt  DOCKET.md  DOWNGRADE_TO_PYTHON_3.13.md  FEATURE_GUIDE.html  FEATURE_GUIDE.md  FOLDER_UPLOAD_PROFILES_PLAN.md  INGESTION_ISSUES.md  INSTALLATION.md  INTEGRATION_PLAN.md  LLM_CONFIGURATION_GUIDE.md  NEO4J_VS_VECTORDB_ANALYSIS.md  OPTIMIZATION_PROPOSAL.md  OWL_AGENT_PROMPTS.md  OWL_CURSOR_MASTER_PROMPT.md  OWL_IMPLEMENTATION_PLAN.md  OWL_PLATFORM_MARKET_ANALYSIS.md  RELEASE_BACKLOG.html  TESTING_FEEDBACK_STATE.md  TEST_REPORT_2026-02-20.md  TIMELINE_WORK.md  TIMESHEET_ENTRY_FORMAT.md  TIMESHEET_JAN_FEB_2026.md  TRANSACTION_REPROCESS_PLAN.md  TRANSACTION_REPROCESS_REPORT_2026-04-18.md  UI_TEST_REPORT_2026-02-20.md  USER_GUIDE.md  V1_V2_DIVERGENCE_REPORT.md  V1_V2_DIVERGENCE_WORK.md  V2_BRIDGING_ROADMAP.md  VECTOR_DB_IMPLEMENTATION_PLAN.md  WIRETAP_DEPENDENCIES.md  WIRETAP_FOLDER_PROCESSING_INSTRUCTIONS.md  WORKING.md  (+11 more)
evidence-engine/: .env.example  CLAUDE.md  Dockerfile  README.md  alembic.ini  pyproject.toml
evidence-engine/alembic/: env.py
evidence-engine/app/: config.py  main.py  worker.py
evidence-engine/evals/: golden_claim_verification.json
evidence-engine/scripts/: regeocode_case.py  run_ingestion_eval.py  scrub_chromadb_nulls.py  scrub_neo4j_nulls.py
evidence-engine/tests/: conftest.py  test_audio_extraction.py  test_batch_dispatch.py  test_cellebrite_ingestion.py  test_cellebrite_location_validation.py  (+30 more)
(+1657 files in other folders)
